--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "packages/server"]
 	path = packages/server
-	url = git@github.com:HospitalRun/hospitalrun-server.git
+	url = git@github.com:mgblackwater/hospitalrun-server.git
 [submodule "packages/components"]
 	path = packages/components
-	url = git@github.com:HospitalRun/components.git
+	url = git@github.com:mgblackwater/components.git
 [submodule "packages/frontend"]
 	path = packages/frontend
-	url = git@github.com:HospitalRun/hospitalrun-frontend.git
+	url = git@github.com:mgblackwater/hospitalrun-frontend.git
 [submodule "packages/core"]
 	path = packages/core
-	url = git@github.com:HospitalRun/hospitalrun-core.git
+	url = git@github.com:mgblackwater/hospitalrun-core.git
 [submodule "packages/cli"]
 	path = packages/cli
-	url = git@github.com:HospitalRun/cli.git
+	url = git@github.com:mgblackwater/cli.git
